--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-VITE_REACT_APP_QDRANT_COLLECTION=fashion_products_vdb_v3
+# VITE_REACT_APP_QDRANT_COLLECTION=fashion_products_vdb_25ep
+VITE_REACT_APP_QDRANT_COLLECTION=fashion_products_vdb
