--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
 version: '3.8'
 services:
   backend:
+    container_name: backend-fastapi
     build: 
       context: .
-      dockerfile: Dockerfile.backend
+      dockerfile: ./backend/Dockerfile
     ports:
       - "8000:8000"
     environment:
@@ -14,15 +15,17 @@ services:
       - db
 
   frontend:
+    container_name: frontend-react
     build:
       context: .
-      dockerfile: Dockerfile.frontend
+      dockerfile: ./frontend/Dockerfile
     ports:
       - "3000:3000"
     depends_on:
       - backend
 
   db:
+    container_name: qdrant
     image: "qdrant/qdrant"
     environment:
       - QDRANT__STORAGE__STORAGE_PATH=/var/lib/qdrant
